fix: hide scrollbar on firefox and fix PageCard height

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -37,6 +37,9 @@
 
   main {
     min-height: calc(100vh - 64px);
+
+    /* hide scrollbar on firefox */
+    scrollbar-width: none;
   }
 
   input[type='submit'] {
